--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,14 @@
 
 
 <body>
+    <table id="latest">
+        <thead>
+            <th>Latest</th>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
 
 </body>
 
