add lIsFull to determine which side is used get oldest items

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,9 @@
 
 <body>
     <table id="latest">
-        <thead>
-            <th>Latest</th>
-        </thead>
-        <tbody>
-
-        </tbody>
     </table>
+    <table id="oldest"></table>
+
 
 </body>
 
