fix infinite loop when getting sum

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                     </td>
                 </th>
             </thead>
-            <tbody id="oldestBody">
+            <tbody id="table2">
 
             </tbody>
         </table>
