--- a/src/index.html
+++ b/src/index.html
@@ -15,19 +15,27 @@
         </table>
     </div>
     <div style="width: 45%; float:right">
-
-        <table id="oldest" style="display: float;">
+        <table style="float:left; width: 40%">
             <thead>
                 <th>
                     <td>
                         <button id="sumButton">Display Sum</button>
                     </td>
+                </th>
+            </thead>
+            <tbody id="sum">
+
+            </tbody>
+        </table>
+        <table style="float:right; width: 40%">
+            <thead>
+                <th>
                     <td>
                         <button id="medianButton">Display Median</button>
                     </td>
                 </th>
             </thead>
-            <tbody id="table2">
+            <tbody id="median">
 
             </tbody>
         </table>
